# rpgp-rsop

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.woodpecker/: clippy.yml  fmt.yml  tests.yml
LICENSES/: Apache-2.0.txt  MIT.txt
rpgpie-sop/: Cargo.toml  README.md
rpgpie-sop-oct/: Cargo.toml  README.md
rpgpie-sop-oct/src/: card.rs  lib.rs  util.rs
rpgpie-sop-oct/src/cmd/: decrypt.rs  inline_sign.rs  mod.rs  sign.rs
rpgpie-sop/src/: lib.rs  util.rs
rpgpie-sop/src/cmd/: armor.rs  dearmor.rs  decrypt.rs  detach.rs  encrypt.rs  extract_cert.rs  generate.rs  inline_sign.rs  inline_verify.rs  mod.rs  password.rs  revoke_key.rs  sign.rs  verify.rs  version.rs
rsop/: Cargo.toml  README.md
rsop-oct/: Cargo.toml  README.md
rsop-oct/src/: main.rs
rsop/src/: main.rs
