# SPDX-FileCopyrightText: Heiko Schaefer <heiko@schaefer.name>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "rsop"
description = "SOP CLI tool based on rpgp and rpgpie"
license = "CC0-1.0"
version = "0.4.0-pre"
authors = ["Heiko Schaefer <heiko@schaefer.name>"]
edition = "2021"
repository = "https://codeberg.org/heiko/rsop"
default-run = "rsop"

[dependencies]
env_logger = ">=0.10, <0.12"
rpgpie-sop = { version = "0.4.0-pre", path = "../rpgpie-sop" }
sop = "0.7.2"

[[bin]]
name = "rsop"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "rsopv"
path = "src/main.rs"
required-features = ["cliv"]

[profile.release]
codegen-units = 1

[features]
default = ["cli"]
cli = ["sop/cli"]
cliv = ["sop/cliv"]
